crates/review-buddy/tests/snapshots/detail_position__position_bottom_160x40.snap
---
source: crates/review-buddy/tests/detail_position.rs
expression: text(& render(& mut app))
---
 review buddy  ·  demo · 4 sources · 7 changes                                                                                                       Liminal HQ
╭ sources ───────────────╮╭ queue ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│▌ ● All               7 ││  Waiting on you · 2                                                                                                                │
│    every source        ││▌ ◐ Add a menu bar and keyboard-driven menus                                                                                     2h │
│  ● liminal-hq        3 ││▌ GH review-buddy#214 · ada · review requested                                                                                      │
│    github.com          ││  ● Raise muted text contrast in the light theme                                                                                 5h │
│  ● smorris           1 ││  GH review-buddy#209 · jo · approved by you                                                                                        │
│    github.com          ││                                                                                                                                    │
│  ● platform          2 ││  Worth a look · 2                                                                                                                  │
│    gitlab.platform.ex… ││  ✕ Cache pipeline status lookups                                                                                                7h │
│  ● gitlab.com        1 ││  GL flow!1182 · priya · you're mentioned                                                                                           │
│    gitlab.com          ││  ● Tidy zsh startup                                                                                                             1d │
│                        ││  GH dotfiles#31 · smorris · yours                                                                                                  │
│  Show  s to change     ││                                                                                                                                    │
│  [x] reviewing         ││  Can wait · 1                                                                                                                      │
│  [x] assigned          ││  · Clarify the install steps                                                                                                    3d │
│  [x] authored          ││  GL notes!12 · kai · approved by you                                                                                               │
│  [ ] drafts            ││                                                                                                                                    │
│  [ ] noise             ││  ▸ Noise · 2 bot updates · ⏎ to expand                                                                                             │
│                        ││                                                                                                                                    │
│                        │╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
│                        │╭ liminal-hq/review-buddy#214 ──────────────────────────────────────────────────────────────────────────────────────────────────── ▼ ╮
│                        ││ Add a menu bar and keyboard-driven menus                                                                                           │
│                        ││ ada wants ada/menus → main                                                                                                         │
│                        ││ +32 −1 · 3 files · opened 3d ago                                                                                                   │
│                        ││                                                                                                                                    │
│                        ││ a Approve  x Request changes  c Comment  ⏎ Diff  m Merge                                                                           │
│                        ││                                                                                                                                    │
│                        ││  Overview   Files 3   Checks 6   Conversation 3                                                                                    │
│                        ││ ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── │
│                        ││ Adds a menu bar along the top and a Menu type that tracks the selected item.                                                       │
│                        ││                                                                                                                                    │
│                        ││ • Menu::select_next and Menu::select_prev move the highlight                                                                       │
│                        ││ • Menu::activate returns the action for the highlighted item                                                                       │
│                        ││ • The bar itself is a plain Line, so it picks up the active theme                                                                  │
│                        ││                                                                                                                                    │
│                        ││ Reviewers                                                        Checks                                                            │
│                        ││ ◌ smorris requested                                              ● 2 passing  ◐ 1 running                                          │
╰────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  s show filters  ? help  T theme  q quit
