crates/review-buddy/tests/snapshots/detail_position__position_dusk_left_129x40.snap
---
source: crates/review-buddy/tests/detail_position.rs
expression: text(& render(& mut app))
---
 review buddy  ·  demo · 4 sources · 7 changes                                                                              Dusk
  1 ● All 7   2 ● liminal-hq 3   3 ● smorris 1   4 ● platform 2   5 ● gitlab.com 1
╭ liminal-hq/review-buddy#214 ─────────────────────────────────────────────── ⟨ ╮╭ queue ───────────────────────────────────────╮
│ Add a menu bar and keyboard-driven menus                                      ││  Waiting on you · 2                          │
│ ada wants ada/menus → main                                                    ││▌ ◐ Add a menu bar and keyboard-driven me… 2h │
│ +32 −1 · 3 files · opened 3d ago                                              ││▌ GH review-buddy#214 · ada · review requested│
│                                                                               ││  ● Raise muted text contrast in the ligh… 5h │
│ a Approve  x Request changes  c Comment  ⏎ Diff  m Merge                      ││  GH review-buddy#209 · jo · approved by you  │
│                                                                               ││                                              │
│  Overview   Files 3   Checks 6   Conversation 3                               ││  Worth a look · 2                            │
│ ───────────────────────────────────────────────────────────────────────────── ││  ✕ Cache pipeline status lookups          7h │
│ Adds a menu bar along the top and a Menu type that tracks the selected item.  ││  GL flow!1182 · priya · you're mentioned     │
│                                                                               ││  ● Tidy zsh startup                       1d │
│ • Menu::select_next and Menu::select_prev move the highlight                  ││  GH dotfiles#31 · smorris · yours            │
│ • Menu::activate returns the action for the highlighted item                  ││                                              │
│ • The bar itself is a plain Line, so it picks up the active theme             ││  Can wait · 1                                │
│                                                                               ││  · Clarify the install steps              3d │
│ Reviewers                             Checks                                  ││  GL notes!12 · kai · approved by you         │
│ ◌ smorris requested                   ● 2 passing  ◐ 1 running                ││                                              │
│ ✎ jo commented                        ○ 1 neutral  ↷ 1 skipped  ⊘ 1 cancelled ││  ▸ Noise · 2 bot updates · ⏎ to expand       │
│                                                                               ││                                              │
│ Latest comment                                                                ││  ── That's everything.                       │
│ jo · 5h ago · menubar.rs:7                                                    ││  7 in this view.                             │
│ These three lines could be one join. Is the intermediate Vec doing anything   ││                                              │
│ for us?                                                                       ││                                              │
│                                                                               ││                                              │
│ Your review  not started                                                      ││                                              │
│                                                                               ││                                              │
│                                                                               ││                                              │
│                                                                               ││                                              │
│                                                                               ││                                              │
│                                                                               ││                                              │
│                                                                               ││                                              │
│                                                                               ││                                              │
│                                                                               ││                                              │
│                                                                               ││                                              │
│                                                                               ││                                              │
│                                                                               ││                                              │
╰───────────────────────────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  s show filters  ? help  T theme  q quit
